--- a/config
+++ b/config
@@ -57,7 +57,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = i3
 modules-center = song
-modules-right = network-traffic memory cpu wlan temperature date powermenu
+modules-right = network-traffic crypto ram cpu wlan temperature date powermenu
 
 tray-position = right
 tray-padding = 0
@@ -210,7 +210,7 @@ format-prefix = "CPU "
 format-underline = #00ff08
 label = %percentage:2%%
 
-[module/memory]
+[module/ram]
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
@@ -271,6 +271,12 @@ format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
 label = %date% %time%
+
+[module/crypto]
+type = custom/script
+interval = 300
+exec = ~/.config/polybar/crypto.py
+format-underline = #7fdfff
 
 [module/network-traffic]
 type = custom/script
