--- a/config
+++ b/config
@@ -277,6 +277,7 @@ type = custom/script
 interval = 300
 exec = ~/.config/polybar/crypto.py
 format-underline = #7fdfff
+format-foreground = #00faff
 
 click-left = ~/.config/polybar/crypto.py
 click-middle = ~/.config/polybar/crypto.py
